--- a/src/app/components/tablecomponent/tablecomponent.component.html
+++ b/src/app/components/tablecomponent/tablecomponent.component.html
@@ -1,3 +1,7 @@
+<ngx-tableheader *ngIf="showFilter"
+[filterFields]="tableColum" (filterDataChange)="filterUpdated($event)"></ngx-tableheader
+>
+
 <div class="table-responsive">
   <table class="table table-hover" [class]="{'table-2': table2}">
     <thead>
