Upaded filter and started implementation of setup screens

--- a/src/app/modules/performance/pages/performance-management-cycle/performance-management-cycle.component.html
+++ b/src/app/modules/performance/pages/performance-management-cycle/performance-management-cycle.component.html
@@ -11,8 +11,8 @@
         [loading]="loading"
         (pageChange)="loadNewPage($event)"
       ></ngx-tablecomponent>
-    </div><ngx-side-modal [(show)]="showModal" [isPage]="true">
-      <div modal-header>New Performance Cycle</div>
+    </div><ngx-side-modal [(show)]="showModal" [isPage]="true" title='New Performance Cycle'>
+      <div modal-header></div>
       <div modal-body>
         
         <div class="linear-form">
