--- a/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
+++ b/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
@@ -13,15 +13,15 @@
       <div class="employment-type">
         <h6>Type of Employment</h6>
         <div class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" id="customCheck1">
-          <label class="custom-control-label" for="customCheck1">Full Time</label>
+          <input type="checkbox" class="custom-control-input" >
+          <label class="custom-control-label" >Full Time</label>
         </div>
         <div class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" id="customCheck1">
-          <label class="custom-control-label" for="customCheck1">Part Time</label>
+          <input type="checkbox" class="custom-control-input" >
+          <label class="custom-control-label" >Part Time</label>
         </div>
         <div class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" id="customCheck1">
+          <input type="checkbox" class="custom-control-input" >
           <label class="custom-control-label">Remote</label>
         </div>
         <div class="custom-control custom-checkbox">
@@ -33,20 +33,20 @@
         <div class="level">
           <h6>Type of Employment</h6>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Entry Level</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label">Entry Level</label>
           </div>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Mid Level</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Mid Level</label>
           </div>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Intermediate Level</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Intermediate Level</label>
           </div>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Senior Level</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Senior Level</label>
           </div>
         </div>
         <div style="padding: 30px;"></div>
@@ -55,20 +55,20 @@
         <div class="industry">
           <h6>Type of Employment</h6>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Banking</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Banking</label>
           </div>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Oil & Gas</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Oil & Gas</label>
           </div>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Technology</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Technology</label>
           </div>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Finannce</label>
+            <input type="checkbox" class="custom-control-input" >
+            <label class="custom-control-label" >Finannce</label>
           </div>
         </div>
       </div>
