--- a/src/app/modules/leave/leavehistory/leavehistory.component.html
+++ b/src/app/modules/leave/leavehistory/leavehistory.component.html
@@ -38,10 +38,11 @@
               </div>
             <div class="form-group">
                 <label for="Start Date" style="font-size: small;font-weight: bold;">Start Date:</label>
-                <input type="date" class="form-control" placeholder="Enter Start Date" [min]="thisDay" name="startDate" #startDate="ngModel" [(ngModel)]="leaveRequestModel.startDate" required>
-                <div *ngIf="startDate.invalid && (startDate.dirty || startDate.touched)" class="error">
+                <!-- <input type="date" class="form-control" placeholder="Enter Start Date" [min]="thisDay" name="startDate" #startDate="ngModel" [(ngModel)]="leaveRequestModel.startDate" required> -->
+                <ngx-date></ngx-date>
+                <!-- <div *ngIf="startDate.invalid && (startDate.dirty || startDate.touched)" class="error">
                   <div *ngIf="startDate.errors.required">Start date is required</div>
-              </div>
+              </div> -->
               </div>
             <div class="form-group">
                 <label for="Number of Days" style="font-size: small;font-weight: bold;">Number of Days:</label>
@@ -64,16 +65,13 @@
                 <ngx-employee-master-search></ngx-employee-master-search>
               </div>
 
+              <div modal-actions class="d-flex mb-5">
+                <button nbButton status="primary" class="d-flex column">Submit</button>
+                <button nbButton outline status="primary" class="d-flex column">Discard</button>
+
+            </div>
         </form>
     </div>
-
-    <div modal-actions class="d-flex mb-5">
-        <button nbButton status="primary" class="d-flex column">Submit</button>
-        <button nbButton outline status="primary" class="d-flex column">Discard</button>
-        <!--   -->
-
-    </div>
-    <div style="margin-top: 15px;"></div>
 </ngx-side-modal>
 
 
@@ -89,17 +87,13 @@
 
             <div class="form-group">
                 <label for="Start Date" style="font-size: small;font-weight: bold;">Start Date:</label>
-                <input type="date" (selectedChanged)="updateCalcs($event)"class="form-control" [min]="thisDay" placeholder="Enter Leave Year" name="startDate" #startDate="ngModel" [(ngModel)]="leavePlanModel.startDate" required>
-                <div *ngIf="startDate.invalid && (startDate.dirty || startDate.touched)" class="error">
+                <!-- <input type="date" onchange="updateCalcs($event)" class="form-control" [min]="thisDay" placeholder="Enter Leave Year" name="startDate" #startDate="ngModel" [(ngModel)]="leavePlanModel.startDate" required>
+                 -->
+                 <ngx-date [max]="leavePlanModel.endDate" [(value)]="leavePlanModel.startDate"></ngx-date>
+                <!-- <div *ngIf="startDate.invalid && (startDate.dirty || startDate.touched)" class="error">
                   <div *ngIf="startDate.errors.required">Start date is required</div>
-                </div>
+                </div> -->
               </div>
-
-              <div class="form-group">
-                <!-- <input [nbDatepicker]="datepicker"> -->
-                <nb-datepicker #datepicker></nb-datepicker>
-              </div>
-
 
 
             <div class="form-group">
@@ -111,8 +105,9 @@
               </div>
             <div class="form-group">
                 <label for="End Date" style="font-size: small;font-weight: bold;">End Date:</label>
-                <input type="number" class="form-control" [disabled] placeholder="Enter Start Date"  name="endDate" #endDate="ngModel" [(ngModel)]="leavePlanModel.endDate" required>
-            </div>
+                <!-- <input type="number" class="form-control" [disabled] placeholder="Enter Start Date"  name="endDate" #endDate="ngModel" [(ngModel)]="leavePlanModel.endDate" required> -->
+                <ngx-date [(value)]="leavePlanModel.endDate" [min]="leavePlanModel.startDate"></ngx-date>
+              </div>
             <div class="form-group">
                 <label for="Comment" style="font-size: small;font-weight: bold;">Comment</label>
                 <textarea class="form-control" placeholder="Enter Comment" name="comment" #comment="ngModel" [(ngModel)]="leavePlanModel.comment"></textarea>
@@ -125,19 +120,14 @@
 
             </div>
 
+            <div modal-actions class="d-flex" style="margin-top: 40px; margin-bottom: 60px;">
+
+              <button nbButton status="primary" class="d-flex column">Submit</button>
+              <button nbButton outline status="primary" class="d-flex column"
+                  style="background-color: white;">Discard</button>
+          </div>
+
         </form>
-    </div>
-
-
-
-    <div modal-actions class="d-flex" style="margin-top: 40px; margin-bottom: 60px;">
-
-        <button nbButton status="primary" class="d-flex column">Submit</button>
-        <button nbButton outline status="primary" class="d-flex column"
-            style="background-color: white;">Discard</button>
-        <button class="d-flex column Attach">
-            <img class="icon" src="assets/icons/attach.jpg" style="height: 30px; margin-left: 20px;margin-right: 10px;">
-            Attach</button>
     </div>
     <div style="margin-top: 10px;"></div>
 </ngx-side-modal>
