--- a/src/app/modules/leave/leavehistory/leavehistory.component.html
+++ b/src/app/modules/leave/leavehistory/leavehistory.component.html
@@ -83,7 +83,7 @@
                 <label for="Employee Name" style="font-size: small;font-weight: bold;">Employee Name:</label>
                 <!-- <input type="text" class="form-control" placeholder="Enter Employee Name" name="employeeName" #employeeName="ngModel" [(ngModel)]="leavePlanModel.employeeContractId"> -->
                 <ngx-employee-master-search></ngx-employee-master-search>
-              </div>
+            </div>
 
             <div class="form-group">
                 <label for="Start Date" style="font-size: small;font-weight: bold;">Start Date:</label>
@@ -95,7 +95,6 @@
                 </div> -->
               </div>
 
-
             <div class="form-group">
                 <label for="Number of Days" style="font-size: small;font-weight: bold;">Number of Days:</label>
                 <input type="number" class="form-control" placeholder="Enter Number Of Days" name="numDays" #numDays="ngModel" [(ngModel)]="leavePlanModel.noOfDays" required>
@@ -103,26 +102,26 @@
                   <div *ngIf="numDays.errors.required">Number of days is required</div>
                 </div>
               </div>
+
             <div class="form-group">
                 <label for="End Date" style="font-size: small;font-weight: bold;">End Date:</label>
                 <!-- <input type="number" class="form-control" [disabled] placeholder="Enter Start Date"  name="endDate" #endDate="ngModel" [(ngModel)]="leavePlanModel.endDate" required> -->
                 <ngx-date [(value)]="leavePlanModel.endDate" [min]="leavePlanModel.startDate"></ngx-date>
               </div>
+
             <div class="form-group">
                 <label for="Comment" style="font-size: small;font-weight: bold;">Comment</label>
                 <textarea class="form-control" placeholder="Enter Comment" name="comment" #comment="ngModel" [(ngModel)]="leavePlanModel.comment"></textarea>
             </div>
 
-   <div class="d-flex-column">
+            <div class="d-flex-column">
                 <nb-checkbox (checkedChange)="toggle($event)">
                     <span>Allow rollover</span>
                 </nb-checkbox>
-
             </div>
 
             <div modal-actions class="d-flex" style="margin-top: 40px; margin-bottom: 60px;">
-
-              <button nbButton status="primary" class="d-flex column">Submit</button>
+              <button nbButton status="primary" [disabled]="myPlanForm.invalid" class="d-flex column">Submit</button>
               <button nbButton outline status="primary" class="d-flex column"
                   style="background-color: white;">Discard</button>
           </div>
