--- a/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
+++ b/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="container"> -->
   <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
     <div class="col-md-2 col-lg-2">
-      <div style="background-color: #4748E0 8%;">
+      <div style="background-color: #4744E0;">
         <h6>Add a keyword</h6>
         <span>Create a keyword and never miss a posting</span>
         <div style="padding: 5px;"></div>
